--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ let currentColor = 'red';
 draw();
 
 // ================= LOGIN VIA API KEY =================
-const apiUrl = "https://69533a53a319a928023adf16.mockapi.io/keys";
+const apiUrl = "";
 async function login(){
   const keyInput = document.getElementById("key").value.trim();
   if(!keyInput) return alert("Digite sua Key");
