Change title and heading from 'GHOST CHEATS' to 'GG CHEATS'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>GHOST CHEATS</title>
+<title>GG CHEATS</title>
 <style>
 :root{
   --theme:#ffb300;
@@ -89,7 +89,7 @@ button{ width:100%; padding:12px; border:none; border-radius:26px; font-size:16p
 <!-- LOGIN -->
 <div class="login" id="login">
   <div class="login-box">
-    <h2>GHOST CHEATS</h2>
+    <h2>GG CHEATS</h2>
     <input id="key" placeholder="Digite sua Key">
     <button onclick="login()">ENTRAR</button>
   </div>
