--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ button{ width:100%; padding:12px; border:none; border-radius:26px; font-size:16p
         <h2>INFORMAÇÕES</h2>
         <div class="creator">Developer: @dk.wq</div>
         
-        <button onclick="window.open('https://discord.gg/E6Wu5DqYrx', '_blank')">
+        <button onclick="window.open('https://discord.gg/53cXRBKydu', '_blank')">
           🔗 Acessar Discord
         </button>
 
