Refactor information section in index.html

--- a/index.html
+++ b/index.html
@@ -146,22 +146,35 @@ button{ width:100%; padding:12px; border:none; border-radius:26px; font-size:16p
       </div>
 
             <div id="info" style="display:none">
-        <h2>INFORMAÇÕES</h2>
-        <div class="creator">Developer: @dk.wq</div>
-        
-        <button onclick="window.open('https://discord.gg/53cXRBKydu', '_blank')">
-          🔗 Acessar Discord
-        </button>
-
-        <div class="colors">
-          <div class="color" style="background:#ffb300" onclick="setTheme('#ffb300')"></div>
-          <div class="color" style="background:#1e90ff" onclick="setTheme('#1e90ff')"></div>
-          <div class="color" style="background:#00ff88" onclick="setTheme('#00ff88')"></div>
-          <div class="color" style="background:#ff3b3b" onclick="setTheme('#ff3b3b')"></div>
-          <div class="color" style="background:#ff5fd2" onclick="setTheme('#ff5fd2')"></div>
-        </div>
-      </div>
-
+  <h2>INFORMAÇÕES</h2>
+  
+  <!-- CORES -->
+  <div class="colors">
+    <div class="color" style="background:#ffb300" onclick="setTheme('#ffb300')"></div>
+    <div class="color" style="background:#1e90ff" onclick="setTheme('#1e90ff')"></div>
+    <div class="color" style="background:#00ff88" onclick="setTheme('#00ff88')"></div>
+    <div class="color" style="background:#ff3b3b" onclick="setTheme('#ff3b3b')"></div>
+    <div class="color" style="background:#ff5fd2" onclick="setTheme('#ff5fd2')"></div>
+  </div>
+  
+  <!-- INFO TEXTOS -->
+  <div class="card">
+    <div class="creator">Developer: <b>@dk.wq</b></div>
+    <div class="creator">Última atualização: <b>09/01/26</b></div>
+    <div class="creator">Versão: <b>v1.0 Stable</b></div>
+  </div>
+  
+  <!-- DISCORD -->
+  <button onclick="window.open('https://discord.gg/U2mbeFBgSK', '_blank')">
+    💬 Discord Oficial - DK CHEATS
+  </button>
+  
+  <!-- EXTRA -->
+  <div class="card">
+    <div class="creator" style="font-size:14px; color:#ccc;">
+      🔒 Sistema com autenticação por Key<br>
+      ⚡ Interface otimizada<br>
+      🛠 Atualizações frequentes
     </div>
   </div>
 </div>
